--- a/index.html
+++ b/index.html
@@ -29,12 +29,10 @@
 			</div>
 			<h3>What's new?</h3>
 			<ul>
-				<li>The website got updated
+				<li>Moved some stuff around to their new places - 2024-07-28</li>
+				<li>The website got updated - 2024-07-28</li>
 			</ul>
 			<h2>Stuff that's pending to be moved</h2>
-				<a href="xp-unhide-components/index.html">How to unhide hidden optional components in Windows XP</a><br>
-				<a href="plusxp-modernwin/index.html">Installing Plus! XP on 64-bit computers</a><br>
-				<a href="oneshot-xp/index.html">OneShot on XP</a><br>
 				<a href="contact.html">Contact</a>
 </body>
 </html>
