--- a/osstuff/xp/hiddenfeatures/index.html
+++ b/osstuff/xp/hiddenfeatures/index.html
@@ -1,28 +1,18 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="How to unhide some more optional components in Windows XP (also works in 2000/Server 2003)">
-<meta name="author" content="Jevil">
-<title>How to unhide hidden optional components in Windows XP</title>
-<style>
-a:link {
-  color: hotpink;
-}
-a:visited {
-  color: hotpink;
-}
-a:hover {
-  color: hotpink;
-}
-a:active {
-  color: hotpink;
-}
-</style>
-<link href="../style.css" rel="stylesheet" type="text/css" media="all">
-</head>
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="description" content="Niko's website - OS Pages - Windows XP (x86) - Unhiding normally hidden optional features">
+		<meta name="author" content="Niko">
+		<title>Unhiding normally hidden optional features in Windows XP - Niko's website</title>
+		<link href="/style.css" rel="stylesheet" type="text/css" media="all">
+	</head>
 <body>
+<div class="center">
+	<h1>Warning: Outdated content below!</h1>
+	This content has not been updated to the site's current design yet!
+</div>
 <h1>How to unhide hidden optional components in Windows XP</h1>
 <p>Windows XP lets you add and remove optional components to the system, however some of them are normally hidden. This will let you unhide them.</p>
 <strong>Note: This also works on Windows 2000, Windows Server 2003/2003 R2, XP betas</strong>
