--- a/osstuff/xp/oneshot2016/index.html
+++ b/osstuff/xp/oneshot2016/index.html
@@ -1,29 +1,19 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="A tutorial on how to run the game OneShot on Windows XP">
-<meta name="author" content="Jevil">
-<title>How to run OneShot on Windows XP</title>
-<style>
-a:link {
-  color: hotpink;
-}
-a:visited {
-  color: hotpink;
-}
-a:hover {
-  color: hotpink;
-}
-a:active {
-  color: hotpink;
-}
-</style>
-<link href="../style.css" rel="stylesheet" type="text/css" media="all">
-</head>
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="description" content="Niko's website - OS Pages - Windows XP (x86) - OneShot (2016)">
+		<meta name="author" content="Niko">
+		<title>OneShot (2016) on Windows XP - Niko's website</title>
+		<link href="/style.css" rel="stylesheet" type="text/css" media="all">
+	</head>
 <body>
-
+<div class="center">
+	<h1>Warning: Outdated content below!</h1>
+	This content has not been updated to the site's current design yet!
+</div>
+</div>
 <h1>How to run OneShot on Windows XP</h1>
 <p>In this tutorial, I'll show you how to run OneShot on Windows XP</p>
 <strong>Note: The copy of OneShot I used had it's steam_api.dll file patched so it does not require Steam to run. You may also need to patch your copy.</strong>
