--- a/index.html
+++ b/index.html
@@ -29,10 +29,9 @@
 			</div>
 			<h3>What's new?</h3>
 			<ul>
+				<li>Made the contact page be the about page temporarily - 2024-07-28</li>
 				<li>Moved some stuff around to their new places - 2024-07-28</li>
 				<li>The website got updated - 2024-07-28</li>
 			</ul>
-			<h2>Stuff that's pending to be moved</h2>
-				<a href="contact.html">Contact</a>
 </body>
 </html>
