--- a/about.html
+++ b/about.html
@@ -8,7 +8,19 @@
 		<title>About - Niko's website</title>
 		<link href="/style.css" rel="stylesheet" type="text/css" media="all">
 	</head>
-<body>
+		<!-- Navigation bar start -->
+	<div class="topnav">
+		<a href="/index.html">Home</a>
+		<a href="/posts/index.html">Posts</a>
+		<a href="/osstuff/index.html">OS Pages</a>
+		<a class="active">Download Center</a>
+		<a href="/videos/index.html">Videos</a>
+		<a href="/about.html">About</a>
+	</div>
+	<hr>
+	<!-- Navigation bar end -->
+	<!-- Site start -->
+	<body>
 <div class="center">
 	<h1>Warning: Outdated content below!</h1>
 	This content has not been updated to the site's current design yet!
