--- a/downloads/index.html
+++ b/downloads/index.html
@@ -26,14 +26,10 @@
 				<h1>Download Center</h1>
 				This is where various downloads will be stored<br>
 			</div>
-			<h3><a href="discord-normal.ico">Discord's old icon - Normal/PTB client</a></h3>
-			Discord's icon from before the 2021 rebrand that was used for the normal and PTB clients.<br>
-			SHA-256: C455654017FC474AFE8BD889F22DE54E78561B7972C35D03438E6D216D30D5D1
-			<h3><a href="discord-canary.ico">Discord's old icon - Canary client</a></h3>
-			Discord's icon from before the 2021 rebrand that was used for the canary client.<br>
-			SHA-256: A5DC017910026FB267F01DA9D2E626FD228850016AAB3D07DC3B6B6E55997DBC
-			<h3><a href="discord-development.ico">Discord's old icon - Development client</a></h3>
-			Discord's icon from before the 2021 rebrand that was used for the development client.<br>
-			SHA-256: 5658CAD1E4129474005C7D66266F964E0860CF1D401469AEBB45746FF6BCF0A9
+			<h3>Discord's old icons</h3>
+			These are the icons that were used by Discord before their 2021 rebrand<br>
+			<a href="discord-normal.ico">Normal/PTB client</a><br>
+			<a href="discord-canary.ico">Canary client</a><br>
+			<a href="discord-development.ico">Development client</a>
 	</body>
 </html>
