--- a/osstuff/index.html
+++ b/osstuff/index.html
@@ -29,5 +29,6 @@
 			</div>
 			<h3>Microsoft Windows</h3>
 			<a href="xp/index.html">Windows XP (x86)</a>
+			<a href="7/index.html">Windows 7</a>
 </body>
 </html>
