--- a/osstuff/index.html
+++ b/osstuff/index.html
@@ -28,7 +28,7 @@
 				You'll find methods to get old apps on new OSes (and the opposite), hidden features, tricks, and so on
 			</div>
 			<h3>Microsoft Windows</h3>
-			<a href="xp/index.html">Windows XP (x86)</a>
+			<a href="xp/index.html">Windows XP (x86)</a><br>
 			<a href="7/index.html">Windows 7</a>
 </body>
 </html>
