--- a/osstuff/7/index.html
+++ b/osstuff/7/index.html
@@ -17,6 +17,7 @@
 			<h3>Ported software</h3>
 			<ul>
 				<li><a href="/posts/gd2206-win7/index.html">Geometry Dash 2.206</a></li>
+				<li><a href="/posts/geode-win7/index.html">Geode</a></li>
 			</ul>
 </body>
 </html>
