Add the videos page

--- a/about.html
+++ b/about.html
@@ -13,9 +13,9 @@
 		<a href="/index.html">Home</a>
 		<a href="/posts/index.html">Posts</a>
 		<a href="/osstuff/index.html">OS Pages</a>
-		<a class="active">Download Center</a>
+		<a href="/downloads/index.html">Download Center</a>
 		<a href="/videos/index.html">Videos</a>
-		<a href="/about.html">About</a>
+		<a class="active">About</a>
 	</div>
 	<hr>
 	<!-- Navigation bar end -->
