Add Discord on Windows 7

--- a/downloads/index.html
+++ b/downloads/index.html
@@ -31,5 +31,8 @@
 			<a href="discord-normal.ico">Normal/PTB client</a><br>
 			<a href="discord-canary.ico">Canary client</a><br>
 			<a href="discord-development.ico">Development client</a>
+			<h3>Discord 1.0.9034 64-bit</h3>
+			The last official version for Windows 7 and Windows 8.1, in 64-bit.<br>
+			<a href="Discord1.0.9034.exe">Download</a>
 	</body>
 </html>
