--- a/osstuff/7/index.html
+++ b/osstuff/7/index.html
@@ -18,6 +18,7 @@
 			<ul>
 				<li><a href="/posts/gd2206-win7/index.html">Geometry Dash 2.206</a></li>
 				<li><a href="/posts/geode-win7/index.html">Geode</a></li>
+				<li><a href="/posts/discord-win7/index.html">Discord (latest x64 versions)</a></li>
 			</ul>
 </body>
 </html>
