--- a/osstuff/7/index.html
+++ b/osstuff/7/index.html
@@ -20,5 +20,9 @@
 				<li><a href="/posts/geode-win7/index.html">Geode</a></li>
 				<li><a href="/posts/discord-win7/index.html">Discord (latest x64 versions)</a></li>
 			</ul>
+			<h3>Last versions of software</h3>
+			<ul>
+				<li>mpv - 2024-07-28 build - <a href="/downloads/index.html">Download from the Download Center</a></li>
+			</ul>
 </body>
 </html>
