--- a/downloads/index.html
+++ b/downloads/index.html
@@ -34,5 +34,10 @@
 			<h3>Discord 1.0.9034 64-bit</h3>
 			The last official version for Windows 7 and Windows 8.1, in 64-bit.<br>
 			<a href="Discord1.0.9034.exe">Download</a>
+			<h3>mpv x86_64 2024-07-28 build</h3>
+			The last build of mpv to work on Windows 7 with VxKex.<br>
+			<a href="mpv-x86_64-20240728-git-6107112.7z">x64</a><br>
+			<a href="mpv-x86_64-v3-20240728-git-6107112.7z">x64 (with AVX2 requirement)</a><br>
+			<a href="mpv-i686-20240728-git-6107112.7z">x86</a>
 	</body>
 </html>
