--- a/videos/index.html
+++ b/videos/index.html
@@ -34,7 +34,9 @@
 				<a href="https://www.youtube.com/watch?v=aU7q-EvL_O8">Windows ME builds</a><br>
 				<a href="upgrade/6.mp4">Windows NT 3.1-Windows NT 3.51 builds</a><br>
 				<a href="upgrade/7.mp4">Windows NT 3.1 SP builds</a><br>
-				<a href="upgrade/8.mp4">Windows NT 4.0 builds</a>
+				<a href="upgrade/8.mp4">Windows NT 3.5 SP builds</a><br>
+				<a href="upgrade/9.mp4">Windows NT 3.51 SP builds</a><br>
+				<a href="upgrade/10.mp4">Windows NT 4.0 builds</a>
 				<h3>Windows Build Explorations</h3>
 				<a href="showcase/122.mp4">Windows 95 build 122</a><br>
 				<a href="showcase/328.mp4">Windows 95 build 328</a><br>
